2017-01-03  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/Plaintext.pm (_output_old): Remove unused 
	function.
	Whole file: Get subroutine arguments by assigning from @_.

2017-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Parser.pm (_parse_texi, _parse_texi_regex): Split 
	out several regexes used at the start of the remaining part of 
	the line.
	* tp/Texinfo/MiscXS/MiscXS.xs,
	* tp/Texinfo/MiscXS/miscxs.c (xs_parse_texi_regex): New function.
	* tp/Texinfo/Parser.pm: Add a 'UNITCHECK' section to override 
	'_parse_texi_regex'.

2017-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/t/automatic_nodes.t: Use the "Texinfo::ModulePath" module.

2017-01-01  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/MiscXS.xs,
	* tp/Texinfo/MiscXS/miscxs.c (xs_process_text): New function.
	* tp/Texinfo/Convert/Plaintext.pm: Add a 'UNITCHECK' section to 
	use 'Texinfo::MiscXS::process_text' inside '_process_text' function.

2016-12-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/miscxs.c (xs_abort_empty_line)
	(xs_merge_text): Use 'bytes_to_utf8' instead of calling 
	'sv_utf8_upgrade'.  The latter appears to cause strange results 
	under perl 5.10.1 (possibly involving the value of $1), and 
	there is a warning about using 'sv_utf8_upgrade' in the perlguts
	man page.
	* tp/Texinfo/MiscXS/MiscXS.xs (xs_abort_empty_line): Check
	if an argument is defined with SvOK.

2016-12-31  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Convert/XSParagraph/configure.ac,
	* tp/Texinfo/MiscXS/configure.ac: Use 'test -n' instead of
	'test -v' for better portability.  Clear another cache variable 
	used internally by autoconf.

2016-12-30  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/MiscXS/miscxs.c (xs_merge_text, xs_abort_empty_line):
	Use 'av_len' instead of 'av_top_index' for compatibility with 
	older versions of Perl.

2016-12-30  Gavin Smith  <gavinsmith0123@gmail.com>
